--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
 <section>
   <h3>Catatan Kecil</h3>
     <p>Dokumen berisi materi yang singkat dan padat (belum tentu jelas). Lebih condong ke "dokumen berbasis contoh".</p>
-$\Rightarrow$ <a href="#">Catatan Kecil</a>
+$\Rightarrow$ <a href="./shortnotes.html">Catatan Kecil</a>
 </section>
 
 </main>
