--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta lang="id" http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta content="viewport=1.0" width="device-width" />
+<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 <title>Haikal Isa</title>
 </head>
 <link rel="stylesheet" href="./latex-min.css" type="text/css" media="all" />
