--- a/shortnotes.html
+++ b/shortnotes.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>Catatan Kecil</title>
   </head>
   <link rel="stylesheet" href="./latex-min.css" type="text/css" media="all" />
