--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0" />
 <title>Haikal Isa</title>
 </head>
-<link rel="stylesheet" href="./latex-min.css" type="text/css" media="all" />
+<link rel="stylesheet" href="https://unpkg.com/latex.css/style.min.css" type="text/css" media="all" />
 <script charset="utf-8">
 window.MathJax = {
 tex: {
