--- a/shortnotes.html
+++ b/shortnotes.html
@@ -24,6 +24,7 @@
       </article>
       
       <article id="Matematika">
+        <h4>Matematika</h4>
         <ol>
           <li>Logika: <a href="obsidian://open?vault=Matematika&file=Logika">Link Obsidian</a> | <a href="./notes/Logika.pdf">pdf</a></li>
         </ol>
