--- a/shortnotes.html
+++ b/shortnotes.html
@@ -9,7 +9,7 @@
   <body>
     <header>
     <h2>Catatan Kecil</h2>
-      <p>Untuk membuka link obsidian, pastikan kalian mempunyai aplikasi Obsidian</p>
+      <p>Suatu dokumen yang ringkas lagi ringan dalam format pdf</p>
      </header>
      
     <main id="content">
