--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ $\Rightarrow$ <a href="./shortnotes.html">Catatan Kecil</a>
 <footer style="position:absolute;bottom:1vh;width:90vw;">
 <hr />
 <p>&copy; Haikal Isa Al Mahdi 2023</p>
+<img src="https://app.piratepx.com/ship?p=1e01eb76-7320-495a-89a8-61bac4894813&i=1" />
 </footer>
 
 </body>
