--- a/shortnotes.html
+++ b/shortnotes.html
@@ -31,6 +31,6 @@
       </article>
       
     </main>
-    <img src="https://app.piratepx.com/ship?p=1e01eb76-7320-495a-89a8-61bac4894813&i=2" />
+    <img src="https://app.piratepx.com/ship?p=1e01eb76-7320-495a-89a8-61bac4894813&i=catatan" />
   </body>
 </html>
