--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0" />
 <title>Haikal Isa</title>
 </head>
-<link rel="stylesheet" href="https://unpkg.com/latex.css/style.min.css" type="text/css" media="all" />
+<!--
 <script charset="utf-8">
 window.MathJax = {
 tex: {
@@ -19,7 +19,7 @@ inlineMath: [['$',
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script type="text/javascript" id="MathJax-script" async
 src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
-</script>
+</script>-->
 <body>
 <header>
 <blockquote class="abstract">
@@ -33,7 +33,9 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
 <section>
   <h3>Catatan Kecil</h3>
     <p>Dokumen berisi materi yang singkat dan padat (belum tentu jelas). Lebih condong ke "dokumen berbasis contoh".</p>
-$\Rightarrow$ <a href="./shortnotes.html">Catatan Kecil</a>
+<math xmlns="http://www.w3.org/1998/Math/MathML">
+  <mo stretchy="false">⇒</mo>
+</math> <a href="./shortnotes.html">Catatan Kecil</a>
 </section>
 
 </main>
@@ -42,6 +44,6 @@ $\Rightarrow$ <a href="./shortnotes.html">Catatan Kecil</a>
 <p>&copy; Haikal Isa Al Mahdi 2023</p>
 <img src="https://app.piratepx.com/ship?p=1e01eb76-7320-495a-89a8-61bac4894813&i=Home" />
 </footer>
-
+<link rel="stylesheet" href="https://unpkg.com/latex.css/style.min.css" type="text/css" media="all" />
 </body>
 </html>
