--- a/shortnotes.html
+++ b/shortnotes.html
@@ -27,7 +27,7 @@
         <h4>Matematika</h4>
         <ol>
           <li>Logika: <a href="./notes/Logika.pdf">pdf</a></li>
-          <li>Aritmetika Modular<a href="./notes/Arithmodular.pdf">pdf</a></li>
+          <li>Aritmetika Modular: <a href="./notes/Arithmodular.pdf">pdf</a></li>
         </ol>
       </article>
       
