--- a/shortnotes.html
+++ b/shortnotes.html
@@ -18,7 +18,7 @@
         <h4>Fisika</h4>
         <ol>
           <li>Kinematika: <a href="./notes/Kinematika.pdf">pdf</a></li>
-          
+          <li>Vektor: <a href="./notes/Vektor.PDF">pdf</a></li>
           
         </ol>
       </article>
