--- a/shortnotes.html
+++ b/shortnotes.html
@@ -17,8 +17,8 @@
       <article id="Fisika">
         <h4>Fisika</h4>
         <ol>
-          <li>Kinematika: <a href="./notes/Kinematika.pdf">pdf</a></li>
-          <li>Vektor: <a href="./notes/Vektor.PDF">pdf</a></li>
+          <li><a href="./notes/Kinematika.pdf">Kinematika</a></li>
+          <li><a href="./notes/Vektor.PDF">Vektor</a></li>
           
         </ol>
       </article>
@@ -26,8 +26,9 @@
       <article id="Matematika">
         <h4>Matematika</h4>
         <ol>
-          <li>Logika: <a href="./notes/Logika.pdf">pdf</a></li>
-          <li>Aritmetika Modular: <a href="./notes/Arithmodular.pdf">pdf</a></li>
+          <li><a href="./notes/Logika.pdf">Logika</a></li>
+          <li><a href="./notes/Arithmodular.pdf">Aritmetika Modular</a></li>
+          <li><a href="./notes/Permutasi.pdf">Permutasi dan Kombinasi</a></li>
         </ol>
       </article>
       
