Update index.html (adding favicon)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta lang="id" http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+ <link rel="icon" href="./webicon.ico" type="image/x-icon">
 <title>Haikal Isa</title>
 </head>
 <!--
