--- a/shortnotes.html
+++ b/shortnotes.html
@@ -31,7 +31,13 @@
           <li><a href="./notes/Permutasi.pdf">Permutasi dan Kombinasi</a></li>
         </ol>
       </article>
-      
+
+      <article id="misc">
+         <h4>Lain-lain</h4>
+        <ol>
+          <li><a href="./notes/aplikasivektor.pdf">Aplikasi Vektor</a></li>
+        </ol>
+      </article>
     </main>
    
   <link rel="stylesheet" href="https://unpkg.com/latex.css/style.min.css" type="text/css" media="all" />
