--- a/shortnotes.html
+++ b/shortnotes.html
@@ -40,6 +40,23 @@
       </article>
     </main>
    
+   <script src="https://giscus.app/client.js"
+        data-repo="haikal-isa/haikal-isa.github.io"
+        data-repo-id="R_kgDOJwzC9g"
+        data-category="General"
+        data-category-id="DIC_kwDOJwzC9s4Cb39E"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="cobalt"
+        data-lang="id"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
+</script>
+   
   <link rel="stylesheet" href="https://unpkg.com/latex.css/style.min.css" type="text/css" media="all" />
   </body>
 </html>
