--- a/shortnotes.html
+++ b/shortnotes.html
@@ -50,7 +50,7 @@
         data-reactions-enabled="0"
         data-emit-metadata="0"
         data-input-position="top"
-        data-theme="cobalt"
+        data-theme="light"
         data-lang="id"
         crossorigin="anonymous"
         async>
