--- a/shortnotes.html
+++ b/shortnotes.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>Catatan Kecil</title>
   </head>
+  <style type="text/css" media="all">
+    .giscus-frame--loading{
+      all: initial;
+      content: 'Loading';
+    }
+  </style>
   
   <body>
     <header>
@@ -40,7 +46,7 @@
       </article>
     </main>
    
-   <script src="https://giscus.app/client.js"
+<script src="https://giscus.app/client.js"
         data-repo="haikal-isa/haikal-isa.github.io"
         data-repo-id="R_kgDOJwzC9g"
         data-category="General"
