--- a/shortnotes.html
+++ b/shortnotes.html
@@ -7,8 +7,8 @@
   </head>
   <style type="text/css" media="all">
     .giscus-frame--loading{
-      all: initial;
-      content: 'Loading';
+      all: initial !important;
+      content: 'Loading' !important;
     }
   </style>
   
