--- a/shortnotes.html
+++ b/shortnotes.html
@@ -6,7 +6,7 @@
     <title>Catatan Kecil</title>
   </head>
   <style type="text/css" media="all">
-    .giscus-frame--loading{
+    .gsc-loading-image{
       all: initial !important;
       content: 'Loading' !important;
     }
