--- a/shortnotes.html
+++ b/shortnotes.html
@@ -9,6 +9,7 @@
     .gsc-loading-image{
       all: initial !important;
       content: 'Loading' !important;
+      background-image: none;
     }
   </style>
   
