--- a/shortnotes.html
+++ b/shortnotes.html
@@ -5,13 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>Catatan Kecil</title>
   </head>
-  <style type="text/css" media="all">
-    .gsc-loading-image{
-      all: initial !important;
-      content: 'Loading' !important;
-      background-image: none !important;
-    }
-  </style>
+
   
   <body>
     <header>
@@ -63,6 +57,12 @@
         async>
 </script>
    
-  <link rel="stylesheet" href="https://unpkg.com/latex.css/style.min.css" type="text/css" media="all" />
+<script src="https://utteranc.es/client.js"
+        repo="haikal-isa/haikal-isa.github.io"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
   </body>
 </html>
