--- a/shortnotes.html
+++ b/shortnotes.html
@@ -41,13 +41,14 @@
       </article>
     </main>
    
-   
 <script src="https://utteranc.es/client.js"
         repo="haikal-isa/haikal-isa.github.io"
         issue-term="pathname"
         theme="github-light"
         crossorigin="anonymous"
         async>
-   </script>
+</script>
+   
+  <link rel="stylesheet" href="https://unpkg.com/latex.css/style.min.css" type="text/css" media="all" />
   </body>
 </html>
