--- a/shortnotes.html
+++ b/shortnotes.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>Catatan Kecil</title>
+    <title>Catatan Kecil Matematika dan Fisika - Haikal Isa</title>
   </head>
 
   
