--- a/shortnotes.html
+++ b/shortnotes.html
@@ -3,6 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name="google-site-verification" content="bTck1qpdr-VRn98lL9vt7Jr6Cc8j2WHSluiQeuq_D3k" />
     <title>Catatan Kecil Matematika dan Fisika - Haikal Isa</title>
   </head>
 
