--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta lang="id" http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0" />
  <link rel="icon" href="./webicon.ico" type="image/x-icon">
+<meta name="google-site-verification" content="bTck1qpdr-VRn98lL9vt7Jr6Cc8j2WHSluiQeuq_D3k" />
 <title>Haikal Isa</title>
 </head>
 <!--
