--- a/shortnotes.html
+++ b/shortnotes.html
@@ -21,7 +21,7 @@
         <ol>
           <li><a href="./notes/Kinematika.pdf">Kinematika</a></li>
           <li><a href="./notes/Vektor.PDF">Vektor</a></li>
-          
+          <li><a href="./notes/kinematika_1D.pdf" >Kinematika 1 Dimensi</a></li>
         </ol>
       </article>
       
