--- a/shortnotes.html
+++ b/shortnotes.html
@@ -51,5 +51,8 @@
 </script>
    
   <link rel="stylesheet" href="https://unpkg.com/latex.css/style.min.css" type="text/css" media="all" />
+
+
+<img src="https://app.piratepx.com/ship?p=a096907c-20d1-4d80-941f-c4071416906a&i=1" />
   </body>
 </html>
