--- a/shortnotes.html
+++ b/shortnotes.html
@@ -53,6 +53,6 @@
   <link rel="stylesheet" href="https://unpkg.com/latex.css/style.min.css" type="text/css" media="all" />
 
 
-<img src="https://app.piratepx.com/ship?p=a096907c-20d1-4d80-941f-c4071416906a&i=1" />
+<img src="https://app.piratepx.com/ship?p=a096907c-20d1-4d80-941f-c4071416906a&i=Catatan" />
   </body>
 </html>
