--- a/shortnotes.html
+++ b/shortnotes.html
@@ -10,6 +10,10 @@
   
   <body>
     <header>
+     <div class="abstract">
+       <a href="./index.html">Halaman Utama</a>
+     </div>
+
     <h2>Catatan Kecil</h2>
       <p>Suatu dokumen yang ringkas lagi singkat dalam format pdf</p>
      </header>
