--- a/index.html
+++ b/index.html
@@ -46,5 +46,7 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
 <p>&copy; Haikal Isa Al Mahdi 2023</p>
 </footer>
 <link rel="stylesheet" href="https://unpkg.com/latex.css/style.min.css" type="text/css" media="all" />
+
+<img src="https://app.piratepx.com/ship?p=a096907c-20d1-4d80-941f-c4071416906a&i=Home" />
 </body>
 </html>
