--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ inlineMath: [['$',
 <script type="text/javascript" id="MathJax-script" async
 src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
 </script>-->
-<body>
+<body class="libertinus">
 <header>
 <blockquote class="abstract">
 "Jatuh Bukanlah Kalah"
