--- a/shortnotes.html
+++ b/shortnotes.html
@@ -8,7 +8,7 @@
   </head>
 
   
-  <body>
+  <body class="libertinus">
     <header>
      <div class="abstract">
        <a href="./index.html">Halaman Utama</a>
