--- a/shortnotes.html
+++ b/shortnotes.html
@@ -54,9 +54,9 @@
         async>
 </script>
    
-  <link rel="stylesheet" href="https://unpkg.com/latex.css/style.min.css" type="text/css" media="all" />
+  <link rel="preload" as="style"  href="https://unpkg.com/latex.css/style.min.css" type="text/css" media="all" />
 
 
-<img src="https://app.piratepx.com/ship?p=a096907c-20d1-4d80-941f-c4071416906a&i=Catatan" />
+<img width="1" height="1" src="https://app.piratepx.com/ship?p=a096907c-20d1-4d80-941f-c4071416906a&i=Catatan" />
   </body>
 </html>
