--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
 <hr />
 <p>&copy; Haikal Isa Al Mahdi 2023</p>
 </footer>
-<link rel="preload" as="style"  href="https://unpkg.com/latex.css/style.min.css" />
+<link rel="stylesheet" href="https://unpkg.com/latex.css/style.min.css" />
 
 <img width="1" height="1" src="https://app.piratepx.com/ship?p=a096907c-20d1-4d80-941f-c4071416906a&i=Home" />
 </body>
