--- a/shortnotes.html
+++ b/shortnotes.html
@@ -26,6 +26,7 @@
           <li><a href="./notes/Kinematika.pdf">Kinematika</a></li>
           <li><a href="./notes/Vektor.PDF">Vektor</a></li>
           <li><a href="./notes/kinematika_1D.pdf" >Kinematika 1 Dimensi</a></li>
+          <li><a href="./notes/kinematika_2d.pdf">Kinematika 2 Dimensi</a></li>
         </ol>
       </article>
       
