--- a/shortnotes.html
+++ b/shortnotes.html
@@ -35,6 +35,7 @@
           <li><a href="./notes/Logika.pdf">Logika</a></li>
           <li><a href="./notes/Arithmodular.pdf">Aritmetika Modular</a></li>
           <li><a href="./notes/Permutasi.pdf">Permutasi dan Kombinasi</a></li>
+          <li><a href="./notes/fungsi.pdf">Fungsi</a></li>
         </ol>
       </article>
 
