--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
 </footer>
 <link rel="stylesheet" href="https://unpkg.com/latex.css/style.min.css" />
 
-<img width="1" height="1" src="https://app.piratepx.com/ship?p=a096907c-20d1-4d80-941f-c4071416906a&i=Home" />
+<img alt="" width="1" height="1" src="https://app.piratepx.com/ship?p=a096907c-20d1-4d80-941f-c4071416906a&i=Home" />
 </body>
 </html>
