--- a/shortnotes.html
+++ b/shortnotes.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
@@ -58,6 +58,6 @@
   <link rel="stylesheet" href="https://unpkg.com/latex.css/style.min.css"/>
 
 
-<img width="1" height="1" src="https://app.piratepx.com/ship?p=a096907c-20d1-4d80-941f-c4071416906a&i=Catatan" />
+<img alt="" width="1" height="1" src="https://app.piratepx.com/ship?p=a096907c-20d1-4d80-941f-c4071416906a&i=Catatan" />
   </body>
 </html>
