--- a/shortnotes.html
+++ b/shortnotes.html
@@ -48,10 +48,19 @@
       </article>
     </main>
    
-<script src="https://utteranc.es/client.js"
-        repo="haikal-isa/haikal-isa.github.io"
-        issue-term="pathname"
-        theme="github-light"
+<script src="https://giscus.app/client.js"
+        data-repo="haikal-isa/haikal-isa.github.io"
+        data-repo-id="R_kgDOJwzC9g"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOJwzC9s4Cb39D"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="0"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="preferred_color_scheme"
+        data-lang="en"
+        data-loading="lazy"
         crossorigin="anonymous"
         async>
 </script>
