--- a/shortnotes.html
+++ b/shortnotes.html
@@ -58,9 +58,8 @@
         data-reactions-enabled="0"
         data-emit-metadata="0"
         data-input-position="top"
-        data-theme="preferred_color_scheme"
+        data-theme="light"
         data-lang="en"
-        data-loading="lazy"
         crossorigin="anonymous"
         async>
 </script>
