--- a/shortnotes.html
+++ b/shortnotes.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta name="google-site-verification" content="bTck1qpdr-VRn98lL9vt7Jr6Cc8j2WHSluiQeuq_D3k" />
     <title>Catatan Kecil Matematika dan Fisika - Haikal Isa</title>
+
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
+  <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
+
+ 
   </head>
 
   
