--- a/shortnotes.html
+++ b/shortnotes.html
@@ -54,20 +54,23 @@
       </article>
     </main>
    
-<script src="https://giscus.app/client.js"
-        data-repo="haikal-isa/haikal-isa.github.io"
-        data-repo-id="R_kgDOJwzC9g"
-        data-category="Announcements"
-        data-category-id="DIC_kwDOJwzC9s4Cb39D"
-        data-mapping="pathname"
-        data-strict="0"
-        data-reactions-enabled="0"
-        data-emit-metadata="0"
-        data-input-position="top"
-        data-theme="light"
-        data-lang="en"
-        crossorigin="anonymous"
-        async>
+
+
+<div id="gitalk-container"></div>
+
+
+<script>
+const gitalk = new Gitalk({
+  clientID: '017584bf1d02dab8a8fc',
+  clientSecret: 'd29b24171c3e5d76bb93b302eb6edda30a998397',
+  repo: 'haikal-isa/haikal.isa.github.io',      // The repository of store comments,
+  owner: 'haikal-isa',
+  admin: ['haikal-isa'],
+  id: location.pathname,      // Ensure uniqueness and length less than 50
+  distractionFreeMode: false  // Facebook-like distraction free mode
+})
+
+gitalk.render('gitalk-container')
 </script>
    
   <link rel="stylesheet" href="https://unpkg.com/latex.css/style.min.css"/>
