--- a/shortnotes.html
+++ b/shortnotes.html
@@ -63,7 +63,7 @@
 const gitalk = new Gitalk({
   clientID: '017584bf1d02dab8a8fc',
   clientSecret: 'd29b24171c3e5d76bb93b302eb6edda30a998397',
-  repo: 'haikal-isa/haikal.isa.github.io',      // The repository of store comments,
+  repo: 'haikal-isa.github.io',      // The repository of store comments,
   owner: 'haikal-isa',
   admin: ['haikal-isa'],
   id: location.pathname,      // Ensure uniqueness and length less than 50
