--- a/shortnotes.html
+++ b/shortnotes.html
@@ -43,7 +43,7 @@
           <li><a href="./notes/Arithmodular.pdf">Aritmetika Modular</a></li>
           <li><a href="./notes/Permutasi.pdf">Permutasi dan Kombinasi</a></li>
           <li><a href="./notes/fungsi.pdf">Fungsi</a></li>
-          <li><a href="./notes/pseudo.pdf">Psuedocode</a></li>
+          <li><a href="./notes/pseudo.pdf">Pseudocode</a></li>
         </ol>
       </article>
 
