--- a/shortnotes.html
+++ b/shortnotes.html
@@ -29,8 +29,8 @@
       <article id="Fisika">
         <h4>Fisika</h4>
         <ol>
-          <li><a href="./notes/Vektor.PDF">Vektor</a></li>
-          <li><a href="./notes/kinematika_1D.pdf" >Kinematika 1 Dimensi</a></li>
+          <li><a href="./notes/beamervector.pdf">Vektor</a></li>
+          <li><a href="./notes/beamerkinematics.pdf" >Kinematika 1 Dimensi</a></li>
           <li><a href="./notes/kinematika_2d.pdf">Kinematika 2 Dimensi</a></li>
           <li><a href="./notes/partikel.pdf">Dinamika Partikel</a></li>
         </ol>
