--- a/shortnotes.html
+++ b/shortnotes.html
@@ -51,7 +51,10 @@
          <h4>Lain-lain</h4>
         <ol>
           <li><a href="./notes/aplikasivektor.pdf">Aplikasi Vektor</a></li>
+
+          <li><a href="./other/osk2023.pdf">Pembahasan OSN-K Informatika 2023 (Pilihan Ganda)</a></li>
         </ol>
+       Apabila ada kekeliruan dalam jawaban, mohon untuk memberikan koreksi.
       </article>
     </main>
    
