--- a/shortnotes.html
+++ b/shortnotes.html
@@ -29,6 +29,7 @@
       <article id="Fisika">
         <h4>Fisika</h4>
         <ol>
+          <li><a href="./notes/psolve.pdf">Analisis Dimensi</a></li>
           <li><a href="./notes/beamervector.pdf">Vektor</a></li>
           <li><a href="./notes/beamerkinematics.pdf" >Kinematika 1 Dimensi</a></li>
           <li><a href="./notes/kinematika_2d.pdf">Kinematika 2 Dimensi</a></li>
