--- a/shortnotes.html
+++ b/shortnotes.html
@@ -30,8 +30,8 @@
         <h4>Fisika</h4>
         <ol>
           <li><a href="./notes/psolve.pdf">Analisis Dimensi</a></li>
-          <li><a href="./notes/beamervector.pdf">Vektor</a></li>
-          <li><a href="./notes/beamerkinematics.pdf" >Kinematika 1 Dimensi</a></li>
+        
+          <li><a href="./notes/M1.pdf" >Kinematika 1 Dimensi</a></li>
           <li><a href="./notes/kinematika_2d.pdf">Kinematika 2 Dimensi</a></li>
           <li><a href="./notes/partikel.pdf">Dinamika Partikel</a></li>
         </ol>
