--- a/shortnotes.html
+++ b/shortnotes.html
@@ -31,7 +31,7 @@
         <ol>
           <li><a href="./notes/psolve.pdf">Analisis Dimensi</a></li>
         
-          <li><a href="./notes/M1.pdf" >Kinematika 1 Dimensi</a></li>
+          <li><a href="./notes/M1.pdf" >Kinematika 1 Dimensi (Draf)</a></li>
           <li><a href="./notes/kinematika_2d.pdf">Kinematika 2 Dimensi</a></li>
           <li><a href="./notes/partikel.pdf">Dinamika Partikel</a></li>
         </ol>
